--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/style.css" rel='stylesheet' type='text/css'/>
+    <link href="/assets/css/gallery.css" rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
+    <script src="/assets/js/gallery.js" language="JavaScript"></script>
 
 </head>
 <div class="header">
@@ -85,8 +88,8 @@
         <div class="col-sm-9">
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-                <li><a data-toggle="tab" href="#messages">Parametres</a></li>
-                <!--<li><a data-toggle="tab" href="#settings">Menu 2</a></li>-->
+                <li><a data-toggle="tab" href="#settings">Parametres</a></li>
+                <li><a data-toggle="tab" href="#gallery">Gallery</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
@@ -131,7 +134,28 @@
                     </div>
                     <hr>
                 </div><!--/tab-pane-->
-                <div class="tab-pane" id="messages">
+                <div class="tab-pane" id="gallery">
+                    <div id="photos">
+                        <ul id="photo-gallery">
+                            <li>
+                                <% for (let i = 0; i < locals.files_img.length; i++) { /*locals.files_img.forEach(function(el, index){ */%>
+                                    <img src="<%= locals.files_img[i] != 'undefined' ? `${locals.files_img[i] }` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png"%>">
+                                <% };%>
+                            </li>
+                        </ul>
+                    </div>
+                    <form action="/upload_img" method="post" enctype="multipart/form-data">
+                        <div class="file-field input-field">
+                            <div class="input-group mb-3">
+                                <div class="custom-file">
+                                    <input name="upload" type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                                </div>
+                            </div>
+                        </div>
+                        <button name="sub_upload" class="btn btn-primary" type="submit" value="submit">Submit</button>
+                    </form>
+                </div><!--/tab-pane-->
+                <div class="tab-pane" id="settings">
                     <h2></h2>
                     <hr>
                     <form class="form" action="#" method="post" id="registrationForm">
@@ -254,12 +278,6 @@
     <div class="container">
         <div class="copy wow fadeInUp" data-wow-delay="0.4s">
             <p>&copy; 2018 Matcha</p>
-        </div>
-        <div class="social wow fadeInRight" data-wow-delay="0.4s">
-            <ul class="footer_social">
-                <li><a href="#"> <i class="fb"> </i> </a></li>
-                <li><a href="#"> <i class="tw"> </i> </a></li>
-            </ul>
         </div>
         <div class='clearfix'></div>
     </div>
