--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -260,7 +260,7 @@
                             <div class="col-xs-6">
                                 <label for="password"><h4>Password *</h4></label>
                                 <input type="password" class="form-control" name="password" id="password"
-                                       placeholder="******" title="Enter your password." required>
+                                       placeholder="******" title="Enter your password.">
                             </div>
                         </div>
                         <div class="form-group">
@@ -268,7 +268,7 @@
                             <div class="col-xs-6">
                                 <label for="password2"><h4>Verify *</h4></label>
                                 <input type="password" class="form-control" name="password2" id="password2"
-                                       placeholder="******" title="Confirm your password." required>
+                                       placeholder="******" title="Confirm your password.">
                             </div>
                         </div>
                         <div class="form-group">
