--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -158,7 +158,6 @@
                 <div class="tab-pane" id="settings">
                     <h2></h2>
                     <hr>
-                    <form class="form" action="#" method="post" id="registrationForm">
                         <div class="form-group">
                             <div class="col-xs-6">
                                 <label for="first_name"><h4>First name</h4></label>
@@ -268,7 +267,6 @@
                                 </button>
                             </div>
                         </div>
-                    </form>
                 </div>
             </div>
         </div>
@@ -284,10 +282,10 @@
 </div>
 
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
-<!--<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>-->
+<script src="/node_modules/jquery/dist/jquery.min.js" language="JavaScript"></script>
 <script src="/node_modules/js-cookie/src/js.cookie.js" language="JavaScript"></script>
-<!--<script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>-->
-<!--<script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>-->
+<script src="/node_modules/sweetalert2/dist/sweetalert2.all.min.js" language="JavaScript"></script>
+<script src="/assets/js/jquery.easydropdown.js" language="JavaScript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" language="JavaScript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" language="JavaScript"></script>
 <script src="/assets/js/profil.js" language="JavaScript"></script>
