Un nouveau nom pour les pedales dans la bdd

--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -193,9 +193,9 @@
                                 <select id="orientation" class="dropdown" tabindex="10"
                                         data-settings='{"wrapperClass":"metro1"}'>
                                     <option value="">Select</option>
-                                    <option value="He">Heterosexual</option>
-                                    <option value="Ho">Homosexual</option>
-                                    <option value="Bi">Bisexual</option>
+                                    <option value="Heterosexual">Heterosexual</option>
+                                    <option value="Homosexual">Homosexual</option>
+                                    <option value="Bisexual">Bisexual</option>
                                 </select>
                             </div>
                         </div>
