--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -96,40 +96,41 @@
                     <hr>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4><%= locals.first_name + " " + locals.last_name %></h4></label>
+                            <label><h4>Name: <%= locals.first_name + " " + locals.last_name %></h4></label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4><%= locals.username %></h4></label>
+                            <label><h4>Username: <%= locals.username %></h4></label>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label>
-                                <h4>Sex</h4>
+                                <h4>Gender: <%= locals.sex %></h4>
                             </label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4>Age</h4></label>
+                            <label><h4>Age: <%= locals.age %></h4></label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4>Sexual orientation</h4></label>
+                            <label><h4>Sexual orientation: <%= locals.orientation %></h4></label>
+                            <!--//todo affciher heteo en entier-->
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4>Bio</h4></label>
+                            <label><h4>Bio: <%= locals.bio %></h4></label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-6">
-                            <label><h4>Tags</h4></label>
+                            <label><h4>Tags: <%= locals.tags %></h4></label>
                         </div>
                     </div>
                     <hr>
@@ -139,7 +140,8 @@
                         <ul id="photo-gallery">
                             <li>
                                 <% for (let i = 0; i < locals.files_img.length; i++) { /*locals.files_img.forEach(function(el, index){ */%>
-                                    <img src="<%= locals.files_img[i] != 'undefined' ? `${locals.files_img[i] }` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png"%>">
+                                <img src="<%= locals.files_img[i] != 'undefined' ? `${locals.files_img[i] }` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
+                                     alt="">
                                 <% };%>
                             </li>
                         </ul>
@@ -158,115 +160,115 @@
                 <div class="tab-pane" id="settings">
                     <h2></h2>
                     <hr>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="first_name"><h4>First name</h4></label>
-                                <input type="text" class="form-control" name="first_name" id="first_name"
-                                       placeholder="<%= locals.first_name %>" title="Enter your first name">
-                            </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="first_name"><h4>First name</h4></label>
+                            <input type="text" class="form-control" name="first_name" id="first_name"
+                                   placeholder="<%= locals.first_name %>" title="Enter your first name">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="last_name"><h4>Last name</h4></label>
-                                <input type="text" class="form-control" name="last_name" id="last_name"
-                                       placeholder="<%= locals.last_name %>" title="Enter your last name">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="last_name"><h4>Last name</h4></label>
+                            <input type="text" class="form-control" name="last_name" id="last_name"
+                                   placeholder="<%= locals.last_name %>" title="Enter your last name">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="Username"><h4>Username</h4></label>
-                                <input type="text" class="form-control" name="username" id="username"
-                                       placeholder="<%= locals.username %>"
-                                       title="Enter your username if any.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="Username"><h4>Username</h4></label>
+                            <input type="text" class="form-control" name="username" id="username"
+                                   placeholder="<%= locals.username %>"
+                                   title="Enter your username if any.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="email"><h4>Email</h4></label>
-                                <input type="email" class="form-control" name="email" id="email"
-                                       placeholder="<%= locals.email %>" title="Enter your email.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="email"><h4>Email</h4></label>
+                            <input type="email" class="form-control" name="email" id="email"
+                                   placeholder="<%= locals.email %>" title="Enter your email.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="sex-orient"><h4>Sexual orientation</h4></label>
-                                <select id="orientation" class="dropdown" tabindex="10"
-                                        data-settings='{"wrapperClass":"metro1"}'>
-                                    <option value="">Select</option>
-                                    <option value="Heterosexual">Heterosexual</option>
-                                    <option value="Homosexual">Homosexual</option>
-                                    <option value="Bisexual">Bisexual</option>
-                                </select>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="sex-orient"><h4>Sexual orientation</h4></label>
+                            <select id="orientation" class="dropdown" tabindex="10"
+                                    data-settings='{"wrapperClass":"metro1"}'>
+                                <option value="">Select</option>
+                                <option value="Heterosexual">Heterosexual</option>
+                                <option value="Homosexual">Homosexual</option>
+                                <option value="Bisexual">Bisexual</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="sex"><h4>Sex</h4></label>
-                                <select id="sex" class="dropdown" tabindex="10"
-                                        data-settings='{"wrapperClass":"metro1"}'>
-                                    <option value="">Select</option>
-                                    <option value="O">Other</option>
-                                    <option value="F">Female</option>
-                                    <option value="M">Male</option>
-                                </select>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="sex"><h4>Sex</h4></label>
+                            <select id="sex" class="dropdown" tabindex="10"
+                                    data-settings='{"wrapperClass":"metro1"}'>
+                                <option value="">Select</option>
+                                <option value="O">Other</option>
+                                <option value="F">Female</option>
+                                <option value="M">Male</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="bio"><h4>Bio</h4></label>
-                                <input type="text" class="form-control" id="bio" placeholder="<%= locals.bio %>"
-                                       title="Enter your bio">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="bio"><h4>Bio</h4></label>
+                            <input type="text" class="form-control" id="bio" placeholder="<%= locals.bio %>"
+                                   title="Enter your bio">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="tags"><h4>Tags</h4></label>
-                                <input type="text" class="form-control" id="tags" placeholder="<%= locals.tags %>"
-                                       title="Choose your tags">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="tags"><h4>Tags</h4></label>
+                            <input type="text" class="form-control" id="tags" placeholder="<%= locals.tags %>"
+                                   title="Choose your tags">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="distance"><h4 id="distanceText">Distance: <%= locals.distance %> (Km)</h4>
-                                </label>
-                                <input type="range" class="form-control" id="distance" value="<%= locals.distance %>"
-                                       min="5" max="50" step="5"
-                                       title="Enter your distance search area"
-                                       onchange="updateTextDistance(this.value);">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="distance"><h4 id="distanceText">Distance: <%= locals.distance %> (Km)</h4>
+                            </label>
+                            <input type="range" class="form-control" id="distance" value="<%= locals.distance %>"
+                                   min="5" max="50" step="5"
+                                   title="Enter your distance search area"
+                                   onchange="updateTextDistance(this.value);">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="age"><h4 id="ageText">Age: <%= locals.age %> </h4></label>
-                                <input type="range" min="18" max="100" class="form-control" name="age" id="age"
-                                       value="<%= locals.age %>" title="Enter your age."
-                                       onchange="updateTextAge(this.value);">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="age"><h4 id="ageText">Age: <%= locals.age %> </h4></label>
+                            <input type="range" min="18" max="100" class="form-control" name="age" id="age"
+                                   value="<%= locals.age %>" title="Enter your age."
+                                   onchange="updateTextAge(this.value);">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="password"><h4>Password *</h4></label>
-                                <input type="password" class="form-control" name="password" id="password"
-                                       placeholder="******" title="Enter your password.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="password"><h4>Password *</h4></label>
+                            <input type="password" class="form-control" name="password" id="password"
+                                   placeholder="******" title="Enter your password.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-6">
-                                <label for="password2"><h4>Verify *</h4></label>
-                                <input type="password" class="form-control" name="password2" id="password2"
-                                       placeholder="******" title="Confirm your password.">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="password2"><h4>Verify *</h4></label>
+                            <input type="password" class="form-control" name="password2" id="password2"
+                                   placeholder="******" title="Confirm your password.">
                         </div>
-                        <div class="form-group">
-                            <div class="col-xs-12">
-                                <br>
-                                <button id="save" class="btn btn-lg btn-success" type="submit"><i
-                                            class="glyphicon glyphicon-ok-sign"></i> Save
-                                </button>
-                                <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset
-                                </button>
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <br>
+                            <button id="save" class="btn btn-lg btn-success" type="submit"><i
+                                        class="glyphicon glyphicon-ok-sign"></i> Save
+                            </button>
+                            <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset
+                            </button>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
