--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,31 +60,67 @@
 </div>
 <div class="content_bottom">
     <div class="container">
-        <div class="box1">
-            <% for (let i = 0; i < locals.users.length; i++) { /*locals.files_img.forEach(function(el, index){ */%>
-            <div class="col-md-4 wow fadeInLeft" data-wow-delay="0.4s">
-                <div class="grid_4"><a href="single?<%= locals.users[i].username%>">
-                        <h4><span class="m_3"><%= locals.users[i].username%></span></h4>
-                        <img src="<%= locals.users[i].profil_img != 0 ? `assets/img/${locals.users[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
-                             class="img-responsive" alt="" style="width: 100%">
-                        <ul class="category_desc">
-                            <li class="cate_head">Mettre score</li>
-                            <li class="cate_right">
-                                <ul class="list1">
-                                    <li><i class="heart"> </i></li>
-                                    <li><i class="heart"> </i></li>
-                                    <li><i class="heart"> </i></li>
-                                    <li><i class="heart"> </i></li>
+        <% if(locals.users != 1){ %>
+            <fieldset>
+                <legend>Les utilsateurs fait pour vous:</legend>
+                <div class="box1">
+                    <% for (let i = 0; i < locals.users.length; i++) { /*locals.files_img.forEach(function(el, index){ */%>
+                    <div class="col-md-3 wow fadeInLeft" data-wow-delay="0.4s">
+                        <div class="grid_4"><a href="single?<%= locals.users[i].username%>">
+                                <h4><span class="m_3"><%= locals.users[i].username%></span></h4>
+                                <img src="<%= locals.users[i].profil_img != 0 ? `assets/img/${locals.users[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
+                                     class="img-responsive" alt="" style="width: 100%">
+                                <ul class="category_desc">
+                                    <li class="cate_head">Mettre score</li>
+                                    <li class="cate_right">
+                                        <ul class="list1">
+                                            <li><i class="heart"> </i></li>
+                                            <li><i class="heart"> </i></li>
+                                            <li><i class="heart"> </i></li>
+                                        </ul>
+                                    </li>
+                                    <div class="clearfix"></div>
                                 </ul>
-                            </li>
-                            <div class="clearfix"></div>
-                        </ul>
-                        <h5>Full Profile</h5>
-                    </a></div>
-            </div>
-            <% };%>
-            <div class="clearfix"></div>
-        </div>
+                                <h5>Full Profile</h5>
+                            </a></div>
+                    </div>
+                    <% }; %>
+                    <div class="clearfix"></div>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Nos suggestion pour vous:</legend>
+                <div class="box1">
+                    <% for (let i = 0; i < locals.suggestion.length; i++) { /*locals.files_img.forEach(function(el, index){ */ %>
+                    <div class="col-md-3 wow fadeInLeft" data-wow-delay="0.4s">
+                        <div class="grid_4"><a href="single?<%= locals.suggestion[i].username %>">
+                                <h4><span class="m_3"><%= locals.suggestion[i].username %></span></h4>
+                                <img src="<%= locals.suggestion[i].profil_img != 0 ? `assets/img/${locals.suggestion[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
+                                     class="img-responsive" alt="" style="width: 100%">
+                                <ul class="category_desc">
+                                    <li class="cate_head">Mettre score</li>
+                                    <li class="cate_right">
+                                        <ul class="list1">
+                                            <li><i class="heart"> </i></li>
+                                            <li><i class="heart"> </i></li>
+                                            <li><i class="heart"> </i></li>
+                                        </ul>
+                                    </li>
+                                    <div class="clearfix"></div>
+                                </ul>
+                                <h5>Full Profile</h5>
+                            </a></div>
+                    </div>
+                    <% }; %>
+                    <div class="clearfix"></div>
+                </div>
+            </fieldset>
+        <% }else{ %>
+            <a href="profil"><h1>Please fill in your parameters to discover the love of your life</h1>
+                <button class="btn1 btn-1 btn1-1b" style="margin-left: 35%;margin-right: 25%;">Fill my parameters
+                </button>
+            </a>
+        <% } %>
         <div class='span1'>
             <select class="dropdown" tabindex="10" data-settings='{"wrapperClass":"metro1"}'>
                 <option value="0">More Profiles</option>
