--- a/views/single.ejs
+++ b/views/single.ejs
@@ -57,6 +57,7 @@
 <div class="profile">
     <div class="container">
         <button id="like_btn" class="btn1 btn-1 btn1-1b" type="submit"><%= locals.like %></button>
+        <!--<button id="msg" class="btn1 btn-1 btn1-1b" type="submit">Discuter</button>-->
         <div class="col-md-8 profile_left">
             <div class="lsidebar span_1_of_profile">
                 <div class="grid_4">
