affichage des personnes qui mon aime

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
                         <div class="grid_4"><a href="single?<%= locals.users[i].username%>">
                                 <h4><span class="m_3"><%= locals.users[i].username%></span></h4>
                                 <img src="<%= locals.users[i].profil_img != 0 ? `assets/img/${locals.users[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
-                                     class="img-responsive" alt="" style="width: 100%">
+                                     class="img-responsive" alt="" style="width: 100%;">
                                 <ul class="category_desc">
                                     <li class="cate_head">Mettre score</li>
                                     <li class="cate_right">
