--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -90,6 +90,7 @@
                 <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
                 <li><a data-toggle="tab" href="#settings">Parametres</a></li>
                 <li><a data-toggle="tab" href="#gallery">Gallery</a></li>
+                <li><a data-toggle="tab" href="#users">Users that have liked your profil</a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="home">
@@ -120,7 +121,6 @@
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label><h4>Sexual orientation: <%= locals.orientation %></h4></label>
-                            <!--//todo affciher heteo en entier-->
                         </div>
                     </div>
                     <div class="form-group">
@@ -139,10 +139,11 @@
                     <div id="photos">
                         <ul id="photo-gallery">
                             <li>
+                                <% if(locals.files_img != ""){ %>
                                 <% for (let i = 0; i < locals.files_img.length; i++) { /*locals.files_img.forEach(function(el, index){ */%>
                                 <img src="<%= locals.files_img[i] != 'undefined' ? `${locals.files_img[i] }` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
                                      alt="">
-                                <% };%>
+                                <% }}; %>
                             </li>
                         </ul>
                     </div>
@@ -156,6 +157,33 @@
                         </div>
                         <button name="sub_upload" class="btn btn-primary" type="submit" value="submit">Submit</button>
                     </form>
+                </div><!--/tab-pane-->
+                <div class="tab-pane" id="users">
+                    <div class="box1">
+                        <% for (let i = 0; i < locals.users_that_liked_you.length; i++) { /*locals.files_img.forEach(function(el, index){ */ %>
+                        <div class="col-md-3 wow fadeInLeft" data-wow-delay="0.4s">
+                            <div class="grid_4"><a href="single?<%= locals.users_that_liked_you[i].username %>">
+                                    <h4><span class="m_3"><%= locals.users_that_liked_you[i].username %></span></h4>
+                                    <img src="<%= locals.users_that_liked_you[i].profil_img != 0 ? `assets/img/${locals.users_that_liked_you[i].profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
+                                         class="img-responsive" alt="" style="width: 100%">
+                                    <br>
+                                    <ul class="category_desc">
+                                        <li class="cate_head">Mettre score</li>
+                                        <li class="cate_right">
+                                            <ul class="list1">
+                                                <li><i class="heart"> </i></li>
+                                                <li><i class="heart"> </i></li>
+                                                <li><i class="heart"> </i></li>
+                                            </ul>
+                                        </li>
+                                        <div class="clearfix"></div>
+                                    </ul>
+                                    <h5>Full Profile</h5>
+                                </a></div>
+                        </div>
+                        <% }; %>
+                        <div class="clearfix"></div>
+                    </div>
                 </div><!--/tab-pane-->
                 <div class="tab-pane" id="settings">
                     <h2></h2>
