--- a/public/assets/css/chat2.css
+++ b/public/assets/css/chat2.css
@@ -579,6 +579,11 @@ body {
   width: calc(100% - 25px);
   font-size: 0.9em;
 }
+
+#frame .content .messages ul li .answer{
+  word-wrap: break-word;
+}
+
 #frame .content .messages ul li:nth-last-child(1) {
   margin-bottom: 20px;
 }
