--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -108,7 +108,7 @@
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label>
-                                <h4>Sex</h4>
+                                <h4>Gender</h4>
                             </label>
                         </div>
                     </div>
@@ -201,11 +201,10 @@
                         </div>
                         <div class="form-group">
                             <div class="col-xs-6">
-                                <label for="sex"><h4>Sex</h4></label>
-                                <select id="sex" class="dropdown" tabindex="10"
+                                <label for="gender"><h4>Gender</h4></label>
+                                <select id="gender" class="dropdown" tabindex="10"
                                         data-settings='{"wrapperClass":"metro1"}'>
                                     <option value="">Select</option>
-                                    <option value="O">Other</option>
                                     <option value="F">Female</option>
                                     <option value="M">Male</option>
                                 </select>
