--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -205,8 +205,8 @@
                                 <select id="gender" class="dropdown" tabindex="10"
                                         data-settings='{"wrapperClass":"metro1"}'>
                                     <option value="">Select</option>
-                                    <option value="F">Female</option>
-                                    <option value="M">Male</option>
+                                    <option value="Female">Female</option>
+                                    <option value="Male">Male</option>
                                 </select>
                             </div>
                         </div>
