--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -110,7 +110,7 @@
                            <img id="profilimg" src="/assets/img/<%= res.username%><%= res.user_id%>profil.png" alt="" />
                            <div class="meta">
                                <p class="name"><%= res.username %></p>
-                               <!-- <p class="preview"><span>You:</span> That's bullshit. This deal is solid.</p> -->
+                               <p class="preview"></p>
                            </div>
                        </div>
                    </li>
