--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -16,7 +16,7 @@
 <!-- <script>try{Typekit.load({ async: true });}catch(e){}</script> -->
 <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'><link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.2/css/font-awesome.min.css'>
 <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="/assets/css/chat2.css" rel='stylesheet' type='text/css'/>
+<link href="/assets/css/chat.css" rel='stylesheet' type='text/css'/>
 <link href="/assets/css/style.css" rel='stylesheet' type='text/css' />
 
 
@@ -58,6 +58,11 @@
             </div>
         <% } %>
         <div class="clearfix"></div>
+    </div>
+</div>
+<div class="profile_banner">
+    <div class="container">
+        <h3>Chat</h3>
     </div>
 </div>
 </header>
@@ -145,6 +150,14 @@
 			</div>
 		</div>
 	</div>
+</div>
+<div class="footer">
+    <div class="container">
+        <div class="copy wow fadeInUp" data-wow-delay="0.4s">
+            <p>&copy; 2018 Matcha</p>
+        </div>
+        <div class='clearfix'></div>
+    </div>
 </div>
 <!-- <script src='//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js'></script><script src='https://code.jquery.com/jquery-2.2.4.min.js'></script> -->
 <script src="http://localhost:8080/socket.io/socket.io.js" language="JavaScript"></script>
