--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,9 @@
 <div class="content_bottom">
     <div class="container">
         <% if(locals.users != 1){ %>
+            <a href="recherche">
+                <button class="btn1 btn-1 btn1-1b" style="float: right">recherche</button>
+            </a>
             <fieldset>
                 <legend>Les utilsateurs fait pour vous:</legend>
                 <div class="box1">
