--- a/views/single.ejs
+++ b/views/single.ejs
@@ -8,6 +8,7 @@
     <link href="/assets/css/bootstrap.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/style.css" rel='stylesheet' type='text/css'/>
     <link href="/assets/css/gallery.css" rel='stylesheet' type='text/css'/>
+    <link href="/assets/css/score.css" rel='stylesheet' type='text/css'/>
 
 </head>
 <body>
@@ -54,6 +55,7 @@
         <h3>Profile</h3>
     </div>
 </div>
+
 <div class="profile">
     <div class="container">
         <% if (locals.match == true){ %>
@@ -71,17 +73,20 @@
                     <img src="<%= locals.user.profil_img != 0 ? `assets/img/${locals.user.profil_img}` : "http://ssl.gstatic.com/accounts/ui/avatar_2x.png" %>"
                          class="img-responsive" alt="" style="width: 100%">
                     <ul class="category_desc1">
-                        <li class="cate_head">Mettre score</li>
-                        <li class="cate_right">
-                            <ul class="list1">
-                                <li><a href="#"><i class="heart"> </i></a></li>
-                                <li><a href="#"><i class="heart"> </i></a></li>
-                            </ul>
+                        <% if(locals.score != 0){ %>
+                        <li class="cate_head">Score:
+                            <% for(let i = 0; i < locals.score; i++){ %>
+                                <label style="color: #fff;">&#9733;</label>
+                            <% } %>
                         </li>
+                        <% }else{ %>
+                            <li class="cate_head">No score</li>
+                        <% } %>
                         <div class="clearfix"></div>
                     </ul>
                 </div>
             </div>
+
             <div class="cont span_2_of_profile">
                 <h4><a href="#"><%= locals.user.first_name + " " + locals.user.last_name%></a></h4>
                 <table class="profile-fields">
@@ -105,6 +110,30 @@
                     </tbody>
                 </table>
                 <p><%= locals.user.bio %></p>
+            </div>
+            <div id="wrapper">
+                <form action="/score?<%= locals.user.username %>" method="post">
+                    <p class="clasificacion">
+                        <input id="radio1" type="radio" name="etoile"
+                               value="5" <%= locals.etoiles == 5 ? checked = "checked" : "" %>>
+                        <label for="radio1">&#9733;</label>
+                        <input id="radio2" type="radio" name="etoile"
+                               value="4" <%= locals.etoiles == 4 ? checked = "checked" : "" %>>
+                        <label for="radio2">&#9733;</label>
+                        <input id="radio3" type="radio" name="etoile"
+                               value="3" <%= locals.etoiles == 3 ? checked = "checked" : "" %>>
+                        <label for="radio3">&#9733;</label>
+                        <input id="radio4" type="radio" name="etoile"
+                               value="2" <%= locals.etoiles == 2 ? checked = "checked" : "" %>>
+                        <label for="radio4">&#9733;</label>
+                        <input id="radio5" type="radio" name="etoile"
+                               value="1" <%= locals.etoiles == 1 ? checked = "checked" : "" %>>
+                        <label for="radio5">&#9733;</label>
+                    </p>
+                    <p>
+                        <button class="btn2 btn-2 btn2-2b" type="submit" value="submit" name="submit">Noter</button>
+                    </p>
+                </form>
             </div>
             <div class="clearfix"></div>
         </div>
